<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="12dp"
    android:paddingHorizontal="24dp"
    android:background="?attr/selectableItemBackground">

    <!-- Obraz albumu -->
    <ImageView
        android:id="@+id/albumArtImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/default_album_art"
        android:layout_marginEnd="12dp"/>

    <!-- Tytuł i autor -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/artistText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_artist"
            android:textSize="14sp"
            android:textColor="?attr/colorOnSurfaceVariant" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_favorite_border_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/favorite"
        android:layout_gravity="center_vertical"
        app:tint="?attr/colorOnSurfaceVariant"
        xmlns:app="http://schemas.android.com/apk/res-auto"/>

</LinearLayout>