<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="48dp"
    android:paddingBottom="12dp"
    android:background="@drawable/gradient_header"
    android:paddingHorizontal="10dp"
    android:gravity="center_vertical">

    <!-- Logo -->
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:layout_marginEnd="12dp"/>

    <!-- Nagłówek -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:layout_weight="1"/>

    <!-- Opcje -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:contentDescription="@string/settings_button"
        android:backgroundTint="@android:color/transparent"
        app:elevation="8dp"
        app:icon="@drawable/ic_settings_32"
        app:iconSize="24dp"
        app:iconGravity="textEnd"
        app:iconTint="?attr/colorOnPrimaryContainer"
        android:layout_gravity="end"/>
</LinearLayout>